Added Images, Rearranged my Code

--- a/h02/index.html
+++ b/h02/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <title>Cities Around The World</title>
-      <link rel="icon" href="capitol.jpg">
+      <link rel="icon" href="resources/capitol.jpg">
       <style type="text/css">
 
           body{
@@ -41,12 +41,41 @@
         <li><a class="tableOfContentsClass" href="#dubai">Dubai, United Arab Emirates</a></li>
       </ul>
       
+      <!--Amsterdam Article Section-->
       <a class="articles" href="https://nl.wikipedia.org/wiki/Amsterdam" target="_blank"><p><h1 id="amsterdam">Amsterdam, The Netherlands</h1></p></a>
+      <img src="resources/amsterdamOne.jpg" width="300" height="150">
+      <img src="resources/amsterdamTwo.jpg" width="300" height="150">
+      <p id="articleParagraphs"></p>
+
+      <!--Sydney Article Section-->
       <a class="articles" href="https://nl.wikipedia.org/wiki/Sydney" target="_blank"><p><h1 id="sydney">Sydney, Australia</h1></p></a>
+      <img src="resources/sydneyOne.jpg" width="300" height="150">
+      <img src="resources/sydneyTwo.jpg" width="300" height="150">
+      <p id="articleParagraphs"></p>
+
+      <!--WashingtonDC Article Section-->
       <a class="articles" href="https://nl.wikipedia.org/wiki/Washington_D.C." target="_blank"><p><h1 id="washingtondc">Washington DC, United States of America</h1></p></a>
+      <img src="resources/washingtonDCOne.jpg" width="300" height="150">
+      <img src="resources/washingtonDCTwo.jpg" width="300" height="150">
+      <p id="articleParagraphs"></p>
+
+      <!--Tokyo Article Section-->
       <a class="articles" href="https://nl.wikipedia.org/wiki/Tokio" target="_blank"><p><h1 id="tokyo">Tokyo, Japan</h1></p></a>
+      <img src="resources/tokyoOne.jpg" width="300" height="150">
+      <img src="resources/tokyoTwo.jpg" width="300" height="150">
+      <p id="articleParagraphs"></p>
+
+      <!--Moscow Article Section-->
       <a class="articles" href="https://nl.wikipedia.org/wiki/Moscow" target="_blank"><p><h1 id="moscow">Moscow, Russian Federation</h1></p></a>
+      <img src="resources/moscowOne.jpg" width="300" height="150">
+      <img src="resources/moscowTwo.jpg" width="300" height="150">
+      <p id="articleParagraphs"></p>
+
+      <!--Dubai Article Section-->
       <a class="articles" href="https://nl.wikipedia.org/wiki/Dubai" target="_blank"><p><h1 id="dubai">Dubai, United Arab Emirates</h1></p></a>
+      <img src="resources/dubaiOne.jpg" width="300" height="150">
+      <img src="resources/dubaiTwo.jpg" width="300" height="150">
+      <p id="articleParagraphs"></p>
 
 
   </body>
