Created First Table & Validation

--- a/h03/index.html
+++ b/h03/index.html
@@ -53,6 +53,9 @@
 
     <!-- AssignmentTwo -->
     <h1>AssignmentTwo</h1>
+    <table>
+      
+    </table>
   
   
     <!---End of AssignmentTwo-->
