--- a/h03/index.html
+++ b/h03/index.html
@@ -5,9 +5,10 @@
     <style>
 
         table, tr, td{
-          width: 450px;
+          width: 700px;
           border: 1px solid black;
           border-collapse: collapse;
+          
         }
 
         tr {
@@ -51,10 +52,42 @@
     </table>
     <!---End of AssignmentOne-->
 
-    <!-- AssignmentTwo -->
+    <!-- AssignmentTwo 2, 10, 13 -->
     <h1>AssignmentTwo</h1>
-    <table>
-      
+    <table cellpadding=10>
+
+        <tr>
+          <td rowspan="2">State of Health</td>
+          <td colspan="2">Fasting Value</td>
+          <td>After Eating</td>
+        </tr>
+
+        <tr>
+          <td>Minimum</td>
+          <td>Maximum</td>
+          <td>2 Hours after Eating</td>
+        </tr>
+
+        <tr>      
+          <td>Healthy</td>
+          <td>70</td>
+          <td>101</td>
+          <td>Less than 140</td>
+        </tr>
+
+        <tr>
+          <td>Pre-Diabetes</td>
+          <td>101</td>
+          <td>126</td>
+          <td>140 to 200</td>
+        </tr>
+
+        <tr>
+          <td>Diabetes</td>
+          <td>More than 126</td>
+          <td>N/A</td>
+          <td>More than 200</td>
+        </tr>
     </table>
   
   
