--- a/h03/index.html
+++ b/h03/index.html
@@ -5,10 +5,7 @@
     <style>
 
         table, tr, td{
-          width: 700px;
           border: 1px solid black;
-          border-collapse: collapse;
-          
         }
 
         tr {
@@ -23,7 +20,7 @@
     
     <!-- Assignment One -->
     <h1>AssignmentOne</h1>
-    <table>
+          <table style="border-collapse: collapse;" width=700>
 
         <tr>
           <td rowspan="2"><br></td>
@@ -54,9 +51,8 @@
 
     <!-- AssignmentTwo 2, 10, 13 -->
     <h1>AssignmentTwo</h1>
-    <table cellpadding=10>
-
-        <tr>
+    <table style="border-collapse: collapse;" cellpadding=10 width=700>
+        <tr class="as1">
           <td rowspan="2">State of Health</td>
           <td colspan="2">Fasting Value</td>
           <td>After Eating</td>
@@ -89,8 +85,42 @@
           <td>More than 200</td>
         </tr>
     </table>
-  
-  
     <!---End of AssignmentTwo-->
+
+    <!-- AssignmentThree 2, 10, 13 -->
+    <h1>AssignmentThree</h1>
+
+    <table width=200 cellpadding=5>
+
+      <tr>
+        <td>(0, 0)</td>
+        <td>(0, 1)</td>
+        <td>(0, 2)</td>
+        <td>(0, 3)</td>
+      </tr>
+
+      <tr>
+        <td>(1, 0)</td>
+        <td colspan="2" style="background-color: red;">(1, 1) (1, 2)</td>
+        <td rowspan="2" style="background-color: green;">(1, 3)<br>(2, 3)</td>
+      </tr>
+
+      <tr>
+        <td>(2, 0)</td>
+        <td>(2, 1)</td>
+        <td>(2, 2)</td>
+      </tr>
+
+      <tr>
+        <td>(3, 0)</td>
+        <td>(3, 1)</td>
+        <td>(3, 2)</td>
+        <td style="background-color: blue;">(3, 3)</td>
+      </tr>
+
+    </table>
+
+    <!---End of AssignmentThree-->
+
   </body>
 </html>
