--- a/h03/index.html
+++ b/h03/index.html
@@ -119,8 +119,148 @@
       </tr>
 
     </table>
+  <!---End of AssignmentThree-->
 
-    <!---End of AssignmentThree-->
+  <!-- AssignmentFour 2, 10, 13 -->
+  <h1>AssignmentFour</h1>
+
+  <table style="border-collapse: collapse;">
+
+  <tr>
+    <td colspan="11" align="left">Print Report</td>
+  </tr>
+
+  <tr>
+    <td>Sl.No</td>
+    <td>Column1</td>
+    <td>Column2</td>
+    <td>100</td>
+    <td>500</td>
+    <td>200</td>
+    <td>600</td>
+    <td>300</td>
+    <td>400</td>
+    <td>Total</td>
+  </tr>
+
+  <tr>
+    <td align="right">1</td>
+    <td rowspan="3" align="center">A</td>
+    <td align="left">bar</td>
+    <!--Numbers-->
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">2</td>
+  </tr>
+
+  <tr>
+    <td align="right">2</td>
+    <td align="left">baz</td>
+    <!--Numbers-->
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+  </tr>
+
+  <tr>
+    <td align="right">3</td>
+    <td align="left">foo</td>
+    <!--Numbers-->
+    <td align="right">3</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">4</td>
+  </tr>
+
+  <tr>
+    <td colspan="3" align="right">A Total</td>
+    <!--Numbers-->
+    <td align="right">3</td>
+    <td align="right">0</td>
+    <td align="right">2</td>
+    <td align="right">0</td>
+    <td align="right">2</td>
+    <td align="right">0</td>
+    <td align="right">7</td>
+  </tr>
+
+  <tr>
+    <td align="right">4</td>
+    <td rowspan="3" align="center">B</td>
+    <td align="left">baz</td>
+    <!--Numbers-->
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+  </tr>
+
+  <tr>
+    <td align="right">5</td>
+    <td align="left">cad</td>
+    <!--Numbers-->
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">1</td>
+    <td align="right">3</td>
+  </tr>
+
+  <tr>
+    <td align="right">6</td>
+    <td align="left">qud</td>
+    <!--Numbers-->
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">0</td>
+    <td align="right">1</td>
+    <td align="right">2</td>
+    <td align="right">5</td>
+  </tr>
+
+  <tr>
+    <td colspan="3" align="right">B Total</td>
+    <!--Numbers-->
+    <td align="right">2</td>
+    <td align="right">0</td>
+    <td align="right">2</td>
+    <td align="right">0</td>
+    <td align="right">2</td>
+    <td align="right">3</td>
+    <td align="right">9</td>
+  </tr>
+
+  <tr>
+    <td colspan="3" align="left">Grand Total</td>
+    <!--Numbers-->
+    <td align="right">5</td>
+    <td align="right">0</td>
+    <td align="right">4</td>
+    <td align="right">0</td>
+    <td align="right">4</td>
+    <td align="right">3</td>
+    <td align="right">16</td>
+  </tr>
+
+  </table>
+  <!---End of AssignmentFour-->
 
   </body>
 </html>
