--- a/h02/index.html
+++ b/h02/index.html
@@ -15,28 +15,27 @@
             font-weight: bold;
           }
 
-          ul.content {
+          .content {
             list-style: square;
             font-weight: bold;
           }
 
-          p.articleParagraphs{
+          .articleParagraphs{
             color: rebeccapurple;
             font-size: small;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-weight: bold;
           }
 
-          a.tableOfContentsClass, a.articles, a.title {
+          .tableOfContentsClass, .articles, .title {
             color: grey;
             text-decoration: none;
           }
 
-          a.tableOfContentsClass:hover, a.articles:hover, a.title {
+          .tableOfContentsClass:hover, .articles:hover, .title {
             color: red;
             text-decoration: none;
-
-          }
+        }
 
       </style>
   </head>
