--- a/h03/index.html
+++ b/h03/index.html
@@ -12,6 +12,25 @@
           text-align: center;
         }
 
+        .as1 {
+          width: 700px;
+          border-collapse: collapse;
+        }
+        
+        .as2 {
+          width: 700px;
+          border-collapse: collapse;
+        }
+
+        .as3 {
+          width: 300px;
+        }
+
+        .as4 {
+          width: 700px;
+          border-collapse: collapse;
+        }
+
     </style>
   </head>
 
@@ -20,7 +39,7 @@
     
     <!-- Assignment One -->
     <h1>AssignmentOne</h1>
-          <table style="border-collapse: collapse;" width=700>
+          <table class="as1">
 
         <tr>
           <td rowspan="2"><br></td>
@@ -51,8 +70,8 @@
 
     <!-- AssignmentTwo 2, 10, 13 -->
     <h1>AssignmentTwo</h1>
-    <table style="border-collapse: collapse;" cellpadding=10 width=700>
-        <tr class="as1">
+    <table class="as2">
+        <tr>
           <td rowspan="2">State of Health</td>
           <td colspan="2">Fasting Value</td>
           <td>After Eating</td>
@@ -90,7 +109,7 @@
     <!-- AssignmentThree 2, 10, 13 -->
     <h1>AssignmentThree</h1>
 
-    <table width=200 cellpadding=5>
+    <table class="as3">
 
       <tr>
         <td>(0, 0)</td>
@@ -124,7 +143,7 @@
   <!-- AssignmentFour 2, 10, 13 -->
   <h1>AssignmentFour</h1>
 
-  <table style="border-collapse: collapse;">
+  <table class="as4">
 
   <tr>
     <td colspan="11" align="left">Print Report</td>
