Created Functional Login & Register Pages & Few Style Adjustments

--- a/h06/index.html
+++ b/h06/index.html
@@ -12,11 +12,11 @@
 
     <div>
       <ul id="navigationBar">
-        <a href="login.html" target="_blank"><li class="navigationBarList">Login</li></a>
-        <a href="signup.html" target="_blank"><li class="navigationBarList">Register</li></a>
-        <a href="index.html"><li class="navigationBarList">Over Ons</li></a>
-        <a href="index.html"><li class="navigationBarList">Produkten</li></a>
-        <a href="index.html"><li class="navigationBarList">Contact</li></a>
+        <a href="login.html" target="_blank" class="decoration"><li class="navigationBarList">Login</li></a>
+        <a href="signup.html" target="_blank" class="decoration"><li class="navigationBarList">Register</li></a>
+        <a href="index.html" class="decoration"><li class="navigationBarList">Over Ons</li></a>
+        <a href="index.html" class="decoration"><li class="navigationBarList">Produkten</li></a>
+        <a href="index.html" class="decoration"><li class="navigationBarList">Contact</li></a>
       </ul>
     </div>
 
