--- a/h07/index.html
+++ b/h07/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-<div id="logo">
-    <img src="resources/img/truemusic-logo.svg" alt="logo true music">
-</div>
+<div id="wrapper">
+
+    <div id="logoWrapper">
+        <img id="logo" src="resources/img/truemusic-logo.svg" alt="logo true music">
+    </div>
 
 <nav>
     <ul>
@@ -23,7 +25,6 @@
     </ul>
 </nav>
 
-<section id="content">
     <section id="news">
         <h3>News</h3>
         <p>Kolom 1. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
@@ -103,13 +104,13 @@
                 metus varius laoreet. Quisque rutrum. Aenean imperdiet.</p>
         </article>
     </section>
-</section>
 <footer>
     <h3 id="contact">RouteInfo</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.0002550611566!2d4.889108615801883!3d52.370415379786095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c11bb7d84f%3A0xa8cc935289b95cd7!2sKalverstraat%2092%2C%201012%20PH%20Amsterdam!5e0!3m2!1snl!2snl!4v1574410333704!5m2!1snl!2snl" width="100%" height="150px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     <p>Adres<br>Kalverstraat 56<br>1057 HC Amsterdam</p>
 </footer>
 
+</div>
 
 </body>
 </html>
